# rustdeepdiff

./: .gitignore  Cargo.toml  README.md  example.py  install_commands.sh  main.py  noxfile.py  pyproject.toml  result.json  result.txt  setup.py
python/rustdeepdiff/: __init__.py
src/: lib.rs
