[package]
name = "rustdeepdiff"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Аналог DeepDiff на Rust с Python-интерфейсом"

[lib]
name = "rustdeepdiff"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde_json = "1.0.140"
