[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustdeepdiff"
version = "0.1.0"
description = "Fast implementation of DeepDiff in Rust"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/rustdeepdiff"
"Bug Tracker" = "https://github.com/yourusername/rustdeepdiff/issues"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[sources]
default = "https://pypi.org/simple"

